RESOLVED FIXED 206539
[iPad] YouTube does not automatically AirPlay when a route is selected from Control Center
https://bugs.webkit.org/show_bug.cgi?id=206539
Summary [iPad] YouTube does not automatically AirPlay when a route is selected from C...
Jer Noble
Reported 2020-01-21 09:38:35 PST
[iPad] YouTube does not automatically AirPlay when a route is selected from Control Center
Attachments
Patch (24.96 KB, patch)
2020-01-21 09:47 PST, Jer Noble
no flags
Patch (28.32 KB, patch)
2020-01-21 10:43 PST, Jer Noble
no flags
Jer Noble
Comment 1 2020-01-21 09:46:55 PST
Jer Noble
Comment 2 2020-01-21 09:47:34 PST
Jer Noble
Comment 3 2020-01-21 10:43:51 PST
Jer Noble
Comment 4 2020-01-21 13:19:06 PST
None of the EWS bot failures seem related; windows is a DumpRenderTree WebSQL property failure, api-mac is WebAuth layout test failures, and mac-wk2 is inspector and CSP layout test failures. Landing.
WebKit Commit Bot
Comment 5 2020-01-21 13:44:04 PST
Comment on attachment 388319 [details] Patch Clearing flags on attachment: 388319 Committed r254878: <https://trac.webkit.org/changeset/254878>
WebKit Commit Bot
Comment 6 2020-01-21 13:44:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.